fix overflow-y for widget-body

--- a/mreporting.css
+++ b/mreporting.css
@@ -93,7 +93,12 @@
 }
 
 .mreportingwidget-body {
-   overflow: hidden;
+   bottom: 0px;
+   top: 0px;
+   left: 0px;
+   overflow-y: auto;
+   width: 461px;
+   height: 408px;
 }
 
 .m_left {
